# github-runner-image-builder-operator

./: .dockerignore  .gitignore  .licenserc.yaml  .trivyignore  .woke.yaml  CODEOWNERS  CONTRIBUTING.md  Makefile  Makefile.docs  README.md  RELEASE-NOTES.md  charmcraft.yaml  index.html  metadata.yaml  preseed.yaml  preseed2.yaml  pyproject.toml  renovate.json  requirements.txt  ssh_key  test.py  tox.ini  trivy.yaml
.github/: pull_request_template.md
1004/: index.html
1022/: index.html
1028/: index.html
1029/: index.html
1039/: index.html
1047/: index.html
1056/: index.html
1075/: index.html
1096/: index.html
1128/: index.html
1133/: index.html
1142/: index.html
1188/: index.html
1216/: index.html
1223/: index.html
1241/: index.html
1282/: index.html
1308/: index.html
1316/: index.html
1326/: index.html
1328/: index.html
1364/: index.html
1398/: index.html
1434/: index.html
1436/: index.html
1440/: index.html
961/: index.html
964/: index.html
965/: index.html
966/: index.html
967/: index.html
968/: index.html
969/: index.html
970/: index.html
971/: index.html
972/: index.html
973/: index.html
974/: index.html
975/: index.html
977/: index.html
978/: index.html
982/: index.html
986/: index.html
987/: index.html
988/: index.html
989/: index.html
990/: index.html
991/: index.html
992/: index.html
993/: index.html
994/: index.html
998/: index.html
app/: .gitignore  .licenserc.yaml  .woke.yaml  conftest.py  pyproject.toml  requirements.txt  tox.ini
app/doc/explanation/: external-builder.md
app/doc/how-to/: pin-github-runner-version.md  use-external-builder-vm.md
app/doc/tutorial/: quick-start.md
app/src-docs/: builder.md  chroot.md  cli.md  cloud_image.md  config.md  errors.md  openstack_builder.md  store.md  utils.md
app/src/github_runner_image_builder/: __init__.py  builder.py  chroot.py  cli.py  cloud_image.py  config.py  errors.py  logging.py  openstack_builder.py  store.py  utils.py
app/src/github_runner_image_builder/templates/: cloud-init.sh.j2
app/tests/: conftest.py
app/tests/integration/: commands.py  conftest.py  helpers.py  naming.py  orphan_cleanup.py  requirements.txt  test_image.py  test_openstack_builder.py  types.py
app/tests/integration/testdata/: metadata.yaml.tmpl  test_script.sh
app/tests/unit/: factories.py  test_builder.py  test_chroot.py  test_cli.py  test_cloud_image.py  test_config.py  test_integration_commands.py  test_logging.py  test_openstack_builder.py  test_store.py  test_upload.py  test_utils.py
docs/: changelog.md  index.md
scripts/: cleanup_openstack_ci_resources.py
src-docs/: builder.py.md  charm.py.md  charm_utils.py.md  (+9 more)
(+1634 files in other folders)
