# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "github-runner-image-builder"
version = "0.13.0"
authors = [
    { name = "Canonical IS DevOps", email = "is-devops-team@canonical.com" },
]
description = "A github runner image builder package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/canonical/github-runner-image-builder"
Issues = "https://github.com/canonical/github-runner-image-builder/issues"

[project.scripts]
github-runner-image-builder = "github_runner_image_builder.cli:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.package-data]
"github_runner_image_builder.templates" = ["*.j2"]

[tool.pydocstyle]
match = "src/github_runner_image_builder/cli.py"
ignore = ["D301"]                                # ignore backshlashes in docstring - click lib uses them.


[tool.bandit]
exclude_dirs = ["/venv/"]
[tool.bandit.assert_used]
skips = ["*/*test.py", "*/test_*.py", "*tests/*.py"]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.pytest.ini_options]
log_cli_level = "INFO"
markers = ["amd64", "arm64"]

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py310"]

[tool.isort]
line_length = 99
profile = "black"

# Linting tools configuration
[tool.flake8]
max-line-length = 99
max-doc-length = 99
max-complexity = 10
exclude = [".git", "__pycache__", ".tox", "build", "dist", "*.egg_info", "venv"]
select = ["E", "W", "F", "C", "N", "R", "D", "H"]
# Ignore W503 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
# Ignore E203: whitespace before : error since it conflicts with black formatter.
ignore = ["W503", "D107", "E203"]
# D100, D101, D102, D103, D104: Ignore docstring style issues in tests
per-file-ignores = ["tests/*:D100,D101,D102,D103,D104,D205,D212"]
docstring-convention = "google"
# Check for properly formatted copyright header in each file
copyright-check = "True"
copyright-author = "Canonical Ltd."
copyright-regexp = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+%(author)s"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
